# HybridZuptIns

./: .gitignore  pyproject.toml
notebooks/: 1 ZUPT INS & GT time interpolation.ipynb  2 hilber space GP.ipynb  2 rotations.ipynb  3 hilber space GP.ipynb  4 matfile conversion.ipynb  5 solins matlab functions.ipynb  6 gp vs hsgp.ipynb
src/: main.py
src/config/: results_io.py
src/config/batch_correction_configs/: gp_kernel_parameters_body.json  gp_kernel_parameters_body_dev.json  gp_kernel_parameters_heading_dev.json
src/config/online_correction_configs/: hybrid_zins.json
src/data_extraction/: read_data.py
src/offline_correction/: approximate_gp.py  batch_correction.py  exact_gp.py  gp.py  hsgp.py  hyperparameter_variability.py
src/online_correction/: hybrid_zupt_ins.py  kalman_filter.py  online_hsgp.py
src/orientation/: orientation.py
src/plotting/: plot_corrections.py  plot_step_segmentation.py  plot_trajectories.py  smooth_zupt_ins.ipynb
src/zupt_ins/: data_classes.py  data_preprocessing.py  detector.py  initialization.py  orientation.py  pipeline.py  trajectory_transform.py  zupt_ins.py
tests/test_zupt_ins/: test_zupt_ins.py
