[project]
name = "hybridzuptins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "polar>=0.0.127",
    "polars>=1.39.3",
    "pytest>=9.0.3",
    "rootutils>=1.0.7",
    "scikit-learn>=1.8.0",
    "sympy>=1.14.0",
]

[tool.pytest.ini_options]
addopts = "-s"
